<resources>
    <string name="app_name">AboutMe</string>
    <string name="description">Its Me</string>

    <string name="tab_home">HOME</string>
    <string name="non_job_role">RUBY and JAVA AMATEUR</string>
    <string name="job_role">SOFTWARE DEVELOPER and TESTER</string>

    <string name="tab_settings">SETTINGS</string>

    <string name="tab_projects">PROJECTS</string>
    <string name="projects_activity">Projects Activity</string>
    <string name="find_me_on_github">Find me on GitHub</string>

    <string name="tab_contacts">CONTACTS</string>
    <string name="find_me_on">Find me on:</string>
    <string name="send_me_mail">Send me mail:</string>
    <string name="my_gmail">lusersks@gmail.com</string>
    <string name="send_cv_by_sms">Send CV by SMS:</string>
    <string name="send">Send</string>

    <string name="tab_skills">SKILLS</string>
    <string name="skills_activity">Skills</string>
    <string name="etSkill">Skill (ex. Ruby)</string>
    <string name="etYears">Years (int)</string>
    <string name="etLevel">Level (1 to 5)</string>
    <string name="tvSkill">Skill text</string>
    <string name="tvYears">1</string>
    <string name="tvLevel">2</string>

</resources>
