<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_home_white_36dp"
        android:orderInCategory="1"
        android:title="@string/tab_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_skills"
        android:icon="@drawable/ic_view_list_white_36dp"
        android:orderInCategory="2"
        android:title="@string/tab_skills"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_projects"
        android:icon="@drawable/ic_extension_white_36dp"
        android:orderInCategory="3"
        android:title="@string/tab_projects"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_contacts"
        android:icon="@drawable/ic_assignment_ind_white_36dp"
        android:orderInCategory="4"
        android:title="@string/tab_contacts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_settings"
        android:icon="@drawable/ic_settings_white_36dp"
        android:orderInCategory="5"
        android:title="@string/tab_settings"
        app:showAsAction="ifRoom" />

</menu>