<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/tvSkill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="20dp"
        android:text="@string/tvSkill"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="20dp"
        android:text="@string/tvYears"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="20dp"
        android:text="@string/tvLevel"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>